# job-hunter

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/db/: base.py
apps/api/app/models/: profile.py
apps/api/app/routers/: profiles.py
apps/api/app/schemas/: profile.py
apps/api/app/services/: extractor_factory.py  llm_extractor.py  pdf_parser.py  regex_extractor.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_profiles_table.py
apps/api/tests/: test_health.py  test_pdf_parser.py  test_profiles_router.py
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/profiles/: route.ts
apps/web/app/api/profiles/[id]/: route.ts
apps/web/app/profiles/: page.tsx
apps/web/app/profiles/[id]/: page.tsx
